deployment-files/kustomize/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana
spec:
  selector:
    app: monitoring-grafana
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
