deployment-files/kustomize/grafana/grafana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana
  namespace: indy-node-monitoring-new
spec:
  host: monitoring-grafana.apps.xkh544cb.canadacentral.aroapp.io
  to:
    kind: Service
    name: monitoring-grafana
    weight: 100
  port:
    targetPort: '3000'
  tls:
    termination: edge
  wildcardPolicy: None
